# wikipedia_suffix_array

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
src/external_sort/: CMakeLists.txt
src/external_sort/include/: external_merge_sort.h  file.h  priority_files_reader.h  sequential_files_reader.h
src/external_sort/src/: external_merge_sort.cpp  priority_files_reader.cpp  sequential_files_reader.cpp
src/external_sort/test/: CMakeLists.txt  test_external_sort.cpp
src/suffix_array/: exec_time_sort.cpp  karkkainen_sanders.cpp  longest_repeated_substring.cpp  longest_repeated_substring.py  longest_repeated_substring_lib.cpp  pybind_example.py  read_data.py
src/text/: compare_reads.cpp  compiler_optimization_speed_comparison.txt  multiple_documents.txt  next_tasks.txt  one_document.txt  python_vs_cplusplus_speed.txt  statistics.txt
